Updating new file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Onboarding</title>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type="image/x-icon" href=>
+  <link rel="icon" type="image/x-icon" href=https://firebasestorage.googleapis.com/v0/b/vinci-prod.appspot.com/o/projectData%2Fonboardin-88ed11e4-e38f-4608-8d%2Ficon%2Ficon.png?alt=media&token=b45fd8de-564d-4ee0-8e7d-f2ae2882d069>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
@@ -31,7 +31,7 @@
         if(document.querySelector("#inputNext") !== null && document.querySelector("#completeC") !== null){
             document.querySelector("#inputNext").addEventListener("click", checkUserInputComplete);
             if(document.querySelector("#completeC") !== null){
-                let emoji = null
+                let emoji = "🔥"
                 if(emoji !== null){
                     emoji = [emoji];
                 }else{
@@ -49,7 +49,7 @@
                 document.querySelector("#inputNext").addEventListener("click", checkUserInput);
             }
             if(document.querySelector("#completeC") !== null){
-                let emoji = null
+                let emoji = "🔥"
                 if(emoji !== null){
                     emoji = [emoji];
                 }else{
@@ -143,6 +143,6 @@
         <script type="text/javascript" src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
         <script type="text/javascript" src="https://unpkg.com/fortmatic@2.0.6/dist/fortmatic.js"></script>
         <script type="text/javascript" src="js/index.js"></script> 
-        <div id="template" class="root base"><img alt="background" style="background-image:url()" src="https://firebasestorage.googleapis.com/v0/b/vinci-dev-6e577.appspot.com/o/default-logo%2FleftLogo.png?alt=media" class="BrandLogo image"/><div id="#" data-xp="100" class="rightCol rightColP"><div class="rightCol1"><div class="text1 title">Example Title</div><div class="text2 subtitle">Example Subtitle</div><div class="parag paragP">Example Text</div></div><a id="screen-cf53f380-6c1d-4eac-83d6-28ccf3afc866" href="screen-cf53f380-6c1d-4eac-83d6-28ccf3afc866"><button id="#" style="background-color:#0032ff" class="button buttonP">Next</button></a></div></div>
+        <div id="template" class="root base"><img alt="background" style="background-image:url(https://firebasestorage.googleapis.com/v0/b/vinci-prod.appspot.com/o/projectData%2Fonboardin-88ed11e4-e38f-4608-8d%2Fscreen-index-5b85fd28-5aa5-4a0d-8bc5-2361e2891ac2%2Flogo.png?alt=media&amp;token=084f2936-f587-4496-8acf-0853f6e88db7)" src="https://firebasestorage.googleapis.com/v0/b/vinci-prod.appspot.com/o/projectData%2Fonboardin-88ed11e4-e38f-4608-8d%2Fscreen-index-5b85fd28-5aa5-4a0d-8bc5-2361e2891ac2%2Flogo.png?alt=media&amp;token=084f2936-f587-4496-8acf-0853f6e88db7" class="BrandLogo image"/><div id="#" data-xp="75" class="rightCol rightColP"><div class="rightCol1"><div class="text1 title">Dummy Text</div><div class="text2 subtitle">Dummy Text</div><div class="parag paragP">Dummy Text</div></div><a id="screen-cf53f380-6c1d-4eac-83d6-28ccf3afc866" href="screen-cf53f380-6c1d-4eac-83d6-28ccf3afc866"><button id="#" style="background-color:#5c00ff" class="button buttonP">Next</button></a></div></div>
     </body>
 </html>
